# transformer_classifier_attachments

./: .gitignore  CLAUDE.md  codelist.csv  pipeline_research.md  pyproject.toml  sow.md  transformer.py  transformer_README.md
results/: sentiment_20250909_032726.xlsm  tabularisai_20250908_214556.csv  tabularisai_20250908_214556.json
