[project]
name = "transformer-classifier-attachments"
version = "0.1.0"
description = "Transformerセンチメント分析とゼロショット分析を決算短信の補足資料に行うプロジェクト"
readme = "transformer_README.md"
requires-python = ">=3.9"
dependencies = [
    "fugashi>=1.5.1",
    "protobuf>=6.32.0",
    "torch>=2.0.0",
    "transformers>=4.20.0",
    "unidic-lite>=1.0.8",
]
